crates/toml/tests/snapshots/invalid/integer/leading-zero-2.stderr
TOML parse error at line 1, column 18
  |
1 | leading-zero-2 = 00
  |                  ^
unexpected leading zero, expected nothing
